
# add here all files
data_DATA = back.xpm filenew2.xpm fileprint.xpm finish.xpm forward.xpm\
	forwpage.xpm largetext.xpm reload.xpm smalltext.xpm start.xpm\
	viewmag+.xpm viewmag-.xpm


# this is the directory, where all datas are installed
# you have given the datas in data_DATA
datadir = $(kde_toolbardir)/

